--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ IPlugExamples/build_errors.log
 /IPlugExamples/duplicate.pyc
 /IPlugExamples/ReverbOne/
 /IPlugExamples/ShifterOne/
+/IPlugExamples/KickMachine/
